RAG_OpenAI_Ollama.ipynb

--- a/RAG_OpenAI_Ollama.ipynb
+++ b/RAG_OpenAI_Ollama.ipynb
@@ -13,7 +13,7 @@
         "- **CPU**: Intel i7-13620H (13th Gen, 10 cores)\n",
         "- **GPU**: RTX 4070 (8GB VRAM)\n",
         "- **RAM**: 32GB DDR5\n",
-        "- **Storage**: SSD\n",
+        "- **Storage**: 1TB SSD\n",
         "\n",
         "## Why I Chose Llama3.2:1B\n",
         "\n",
